--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,25 @@
   </head>
   <body>
 
+  <style>
+    .arrow-up {
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+
+      border-bottom: 5px solid black;
+    }
+    .arrow-down {
+      width: 0;
+      height: 0;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+
+      border-top: 20px solid #f00;
+    }
+  </style>
+
   <div class="container">
     <div id="root"></div>
   </div>
