--- a/public/index.html
+++ b/public/index.html
@@ -20,26 +20,7 @@
   </head>
   <body>
 
-  <style>
-    .arrow-up {
-      width: 0;
-      height: 0;
-      border-left: 5px solid transparent;
-      border-right: 5px solid transparent;
-
-      border-bottom: 5px solid black;
-    }
-    .arrow-down {
-      width: 0;
-      height: 0;
-      border-left: 20px solid transparent;
-      border-right: 20px solid transparent;
-
-      border-top: 20px solid #f00;
-    }
-  </style>
-
-  <div class="container">
+  <div class="container tracklist-container">
     <div id="root"></div>
   </div>
 
